# codegen/kotlin/src/main/kotlin/me/uma/auth/models/BudgetEstimateResponse.kt
@@ -1,0 +1,23 @@
+/**
+* UMA Auth API
+* This API allows you to authenticate with the UMA server to take actions on a user's wallet. It's the exposed communication layer between the NWC server and the main UMA server.
+*
+* The version of the OpenAPI document: 0.1
+* 
+*
+* NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+* https://openapi-generator.tech
+* Do not edit the class manually.
+*/
+package me.uma.auth.models
+
+
+/**
+ * 
+ * @param estimatedBudgetCurrencyAmount The estimated cost of the payment in the smallest unit of  `budget_currency_code`. This amount will be used to calculate  the amount to hold from the budget for this connection while  the payment is in-flight. 
+ */
+data class BudgetEstimateResponse(
+    /* The estimated cost of the payment in the smallest unit of  `budget_currency_code`. This amount will be used to calculate  the amount to hold from the budget for this connection while  the payment is in-flight.  */
+    val estimatedBudgetCurrencyAmount: kotlin.Long
+) 
+
